infra/monitoring/Allow-ingress-monitoring-to-exporter.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring-to-pg-exporter
  namespace: listmonk
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-postgres-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9187
