infra/monitoring/networkpolicy-Allow-Egress-exporter-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pg-exporter-to-postgres
  namespace: listmonk
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-postgres-exporter
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432
