infra/monitoring/networkpolicy-Allow-ingress-exporter-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pg-exporter-into-postgres
  namespace: listmonk
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus-postgres-exporter
      ports:
        - protocol: TCP
          port: 5432
